2004/03/07 03:33 (-0500) rwmcfa1

	* GenPod.pm, ParseXSDoc.pm: added support for the __gerror__ keyword on
	=for apidoc lines. to be used at a latter date.

2004/03/05 00:28 (-0500) muppetman

	* Makefile.PL: add version checks to the import attempts for our
	black-sheep ExtUtils modules; more recent versions actually support
	the version checks.

	* MakeHelper.pm: use almost excessive validation to detect whether
	ExtUtils::Depends is of sufficient vintage, and bail out if not,
	using the same trick as Makefile.PL to coax CPAN into updating.

2004/03/04 09:52 (-0500) muppetman

	* MakeHelper.pm: fix a bug in the MY::const_cccmd override which
	rendered makefiles broken and useless when there were no C or XS
	files to compile.

	* Makefile.PL: install the MakeHelper manpage.

2004/03/02 20:59 (-0500) rwmcfa1

	* Glib.pm: alter the behavior of read only/write only tied properites.
	setting a read only croaks, reading a write only returns
	'[write-only]'.  should affect anything/anyone, just make things work a
	little better with Dumper and stuff like that.

	* GObject.xs: doc changes ^

2004/03/02 00:42 (-0500) muppetman

	* README, Glib.pm, NEWS: API-frozen unstable release 1.038

	* GMainLoop.xs: change version guard on g_main_depth() to 2.3.5,
	which was released today; minor cleanup and doc.

2004/03/01 12:17 (-0500) rwmcfa1

	* GMainLoop.xs: g_main_depth bound as Glib::main_depth (ver 2.4)

2004/02/27 22:12 (-0500) muppetman

	* GClosure.xs, GLog.xs, GMainLoop.xs, GType.xs: short descriptions
	for the NAME sections

2004/02/27 14:38 (-0500) rwmcfa1

	* GenPod.pm: mystery solved, Exporter needed quotes around it in the use
	base call. as to why it died the way it was with "Unknown error" i don't
	yet know, looking into it. use stict is now uncommented, and this issue
	is closed so far as Glib is concerned. 

2004/02/27 13:58 (-0500) rwmcfa1

	* GenPod.pm: use warnings now used. Also turned on strict to get rid of