@@ -1,3 +1,8 @@
+2004/03/07 23:54 (-0500) muppetman
+
+	* GenPod.pm: don't add L<> around items that already have it in
+	podify_see_alsos
+
 2004/03/07 03:33 (-0500) rwmcfa1
 
 	* GenPod.pm, ParseXSDoc.pm: added support for the __gerror__ keyword on
